rename(code = R); latex workflow; xaringan

--- a/workflow/tables/first-pokemon.tex
+++ b/workflow/tables/first-pokemon.tex
@@ -1,5 +1,5 @@
 % latex table generated in R 3.5.0 by xtable 1.8-2 package
-% Mon Sep 17 23:34:18 2018
+% Tue Sep 18 00:53:53 2018
 \begin{table}[ht]
 \centering
 \begin{tabular}{llll}
@@ -7,8 +7,8 @@
 Pok\'emon & Type & Weakness & Gary Picks \\ 
   \midrule
 Bulbasaur & Grass & Fire & Charmander \\ 
-  Squirtle & Fire & Grass & Bulbasaur \\ 
-  Charmander & Water & Water & Squirtle \\ 
+  Squirtle & Water & Grass & Bulbasaur \\ 
+  Charmander & Fire & Water & Squirtle \\ 
    \bottomrule
 \end{tabular}
 \caption{Choices for your first Pok\'emon} 
