updates to workflow and xaringan

--- a/workflow/latex-workflow-2018.tex
+++ b/workflow/latex-workflow-2018.tex
@@ -18,9 +18,9 @@
 \usepackage{microtype} % microtypographical things (not essential)
 
 % fonts: 
-\usepackage{mathptmx} % serif = times (with math fonts!)
-\usepackage{helvet}   % sans-serif = helvetica clone
-\usepackage{zi4}      % mono = inconsolata
+\usepackage{mathptmx}       % serif = times (with math fonts!)
+\usepackage{helvet}         % sans-serif = helvetica clone
+\usepackage[varqu]{zi4}     % mono = inconsolata
 
 % if you write non-English or need special accent characters, load these
 \usepackage[utf8]{inputenc} % better interpretation of input characters
@@ -260,12 +260,12 @@ Google Scholar has a citation button that lets you access citations in multiple 
   \includegraphics[width = 0.7\textwidth]{graphics/scholar-button.png}
 \end{center}
 
-\paragraph{\texttt{doi2bib}} The idea of \url{doi2bib.org} is simple. Paste a DOI number, get a \texttt{.bib} entry.
+\paragraph{DOI Numbers} Get bibliographic info from DOI numbers using \url{doi2bib.org} is simple. Paste a DOI number, get a \texttt{.bib} entry.
 
 
 \paragraph{Mendeley, Zotero, BibDesk\ldots} There are a handful of reference-manager apps. You can get these apps to export \texttt{.bib} entries for the works in your library.
 
-\paragraph{Various \texttt{R} packages} There are some \texttt{R} packages out there that provide package utilities, such as importing all entries from a \texttt{.bib} file into a data frame for customization within \texttt{R}.%
+\paragraph{Various R packages} There are some \texttt{R} packages out there that provide package utilities, such as importing all entries from a \texttt{.bib} file into a data frame for customization within \texttt{R}.%
   \footnote{\url{https://cran.r-project.org/web/packages/bib2df/vignettes/bib2df.html}}
 
 
