delete unnecessary images

--- a/handout/latex-handout-2018.tex
+++ b/handout/latex-handout-2018.tex
@@ -646,7 +646,7 @@ Specify the size of the image using height or width. Here, the command\ldots
 
 \begin{minipage}{\linewidth}
 \begin{lstlisting}
-  \includegraphics[width = .9\textwidth]{imgs/specs-gen-vio-box.png}
+  \includegraphics[width = .9\textwidth]{imgs/attack-defense.pdf}
 \end{lstlisting}
 \end{minipage}
 
