--- a/R-Markdown/rmd-preamble.tex
+++ b/R-Markdown/rmd-preamble.tex
@@ -16,6 +16,7 @@
 
 
 % --- floats -----------------------
+\usepackage{dcolumn}
 \usepackage{booktabs}
 \usepackage{longtable} % for selective float-prevention
 
